--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Download APK from build
         uses: actions/download-artifact@v1
         with:
-          name: build
+          name: apk
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
