config github action

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,74 +9,76 @@ on:
 env:
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
-
 jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: set up JDK 11
-#        uses: actions/setup-java@v2
-#        with:
-#          java-version: '11'
-#          distribution: 'temurin'
-#          cache: gradle
-#
-#      - name: Grant execute permission for gradlew
-#        run: chmod +x gradlew
-#      - name: Build APK
-#        run: bash ./gradlew assembleDebug --stacktrace
-#
-#      - name: Upload APK
-#        uses: actions/upload-artifact@v1
-#        with:
-#          name: apk
-#          path: app/build/outputs/apk/debug/app-debug.apk
-#
-#  release:
-#    name: Release APK
-#    needs: build
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Download APK from build
-#        uses: actions/download-artifact@v1
-#        with:
-#          name: apk
-#
-#      - name: Create Release
-#        id: create_release
-#        uses: actions/create-release@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          tag_name: ${{ github.run_number }}
-#          release_name: ${{ github.event.repository.name }} v${{ github.run_number }}
-#
-#      - name: Upload Release APK
-#        id: upload_release_asset
-#        uses: actions/upload-release-asset@v1.0.1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          upload_url: ${{ steps.create_release.outputs.upload_url }}
-#          asset_path: apk/app-debug.apk
-#          asset_name: ${{ github.event.repository.name }}.apk
-#          asset_content_type: application/zip
-#
-#      - name: Notify on Slack
+  #  build:
+  #    runs-on: ubuntu-latest
+  #
+  #    steps:
+  #      - uses: actions/checkout@v2
+  #      - name: set up JDK 11
+  #        uses: actions/setup-java@v2
+  #        with:
+  #          java-version: '11'
+  #          distribution: 'temurin'
+  #          cache: gradle
+  #
+  #      - name: Grant execute permission for gradlew
+  #        run: chmod +x gradlew
+  #      - name: Build APK
+  #        run: bash ./gradlew assembleDebug --stacktrace
+  #
+  #      - name: Upload APK
+  #        uses: actions/upload-artifact@v1
+  #        with:
+  #          name: apk
+  #          path: app/build/outputs/apk/debug/app-debug.apk
+  #
+  #  release:
+  #    name: Release APK
+  #    needs: build
+  #    runs-on: ubuntu-latest
+  #    steps:
+  #      - name: Download APK from build
+  #        uses: actions/download-artifact@v1
+  #        with:
+  #          name: apk
+  #
+  #      - name: Create Release
+  #        id: create_release
+  #        uses: actions/create-release@v1
+  #        env:
+  #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #        with:
+  #          tag_name: ${{ github.run_number }}
+  #          release_name: ${{ github.event.repository.name }} v${{ github.run_number }}
+  #
+  #      - name: Upload Release APK
+  #        id: upload_release_asset
+  #        uses: actions/upload-release-asset@v1.0.1
+  #        env:
+  #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #        with:
+  #          upload_url: ${{ steps.create_release.outputs.upload_url }}
+  #          asset_path: apk/app-debug.apk
+  #          asset_name: ${{ github.event.repository.name }}.apk
+  #          asset_content_type: application/zip
+  #
+  #      - name: Notify on Slack
 
-#        uses: act10ns/slack@v1.0.9
-#        with:
-#          status: ${{ job.status }}
-#          steps: ${{ toJson(steps) }}
-#          if: always()
+  #        uses: act10ns/slack@v1.0.9
+  #        with:
+  #          status: ${{ job.status }}
+  #          steps: ${{ toJson(steps) }}
+  #          if: always()
 
   release:
     name: Release APK
-#    needs: build
+    #    needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Grant execute permission for gradlew
+        run: echo ${{ secrets.SLACK_WEBHOOK_URL }}
+
       - name: Notify on Slack
         uses: act10ns/slack@v1.6.0
         with:
